<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bs_filter"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:background="@color/light_gray"
            android:layout_width="60dp"
            android:layout_marginTop="@dimen/margin_12"
            android:layout_height="2dp"/>

        <View
            android:background="@color/orange"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/margin_32"
            android:layout_height="2dp"/>

        <RadioGroup
            android:id="@+id/radio_group"
            android:padding="@dimen/padding_8"
            android:layout_marginTop="@dimen/margin_32"
            android:layout_marginBottom="@dimen/margin_16"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RadioButton
                android:id="@+id/rb_alive"
                android:text="@string/alive"
                style="@style/BaseRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/rb_dead"
                android:text="@string/dead"
                style="@style/BaseRadioButton"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/rb_unknown"
                android:text="@string/unknown"
                style="@style/BaseRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RadioGroup>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="@dimen/margin_32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reset"
                android:text="@string/reset"
                app:cornerRadius="8dp"
                android:textColor="@color/white"
                android:layout_marginEnd="@dimen/margin_16"
                android:textAllCaps="false"
                android:backgroundTint="@color/orange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/apply"
                android:text="@string/apply"
                app:cornerRadius="8dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:backgroundTint="@color/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>