<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/margin_8"
    android:layout_marginTop="@dimen/margin_8"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_image"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginVertical="@dimen/margin_2"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.ExtraSmall" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/padding_8"
            android:paddingVertical="@dimen/padding_8">

            <TextView
                android:id="@+id/tv_name"
                style="@style/AppTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:textSize="@dimen/text_20"
                tools:text="Rick Sanchez" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:gravity="bottom"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/AppTextStyle"
                            android:textAllCaps="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|center_vertical"
                            android:text="@string/status"/>

                        <TextView
                            android:id="@+id/tv_status"
                            style="@style/AppTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end|center_vertical"
                            tools:text="Alive" />

                    </FrameLayout>

                    <FrameLayout
                        android:layout_marginVertical="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/AppTextStyle"
                            android:textAllCaps="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|center_vertical"
                            android:text="@string/species"/>

                        <TextView
                            android:id="@+id/tv_species"
                            style="@style/AppTextStyle"
                            android:textColor="@color/orange"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end|center_vertical"
                            tools:text="Alien" />

                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_marginBottom="8dp"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/AppTextStyle"
                            android:textAllCaps="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|center_vertical"
                            android:text="@string/gender"/>

                        <TextView
                            android:id="@+id/tv_gender"
                            style="@style/AppTextStyle"
                            android:textColor="@color/orange"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end|center_vertical"
                            tools:text="male" />

                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/AppTextStyle"
                            android:textAllCaps="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|center_vertical"
                            android:text="@string/origin"/>

                        <TextView
                            android:id="@+id/tv_origin"
                            style="@style/AppTextStyle"
                            android:textColor="@color/orange"
                            android:layout_width="140dp"
                            android:gravity="end"
                            android:maxLines="2"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end|center_vertical"
                            tools:text="alphabetrium" />

                    </FrameLayout>

                </LinearLayout>

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>